--- a/mkplatformfs.sh.in
+++ b/mkplatformfs.sh.in
@@ -51,7 +51,7 @@ Usage: $PROGNAME [options] <platform> <base-tarball>
 Supported platforms: i686, x86_64, GCP, bananapi, beaglebone,
                      cubieboard2, cubietruck, odroid-c2, odroid-u2,
                      rpi-armv6l, rpi-armv7l, rpi-aarch64, ci20,
-                     pinebookpro, pinephone, rock64
+                     pinebookpro, pinephone, rock64, rockpro64
 
 Options
     -b <syspkg> Set an alternative base-system package (defaults to base-system)
@@ -125,6 +125,7 @@ case "$PLATFORM" in
     pinebookpro*) PKGS="$BASEPKG ${PLATFORM%-*}-base" ;;
     pinephone*) PKGS="$BASEPKG ${PLATFORM%-*}-base" ;;
     rock64*) PKGS="$BASEPKG ${PLATFORM%-*}-base" ;;
+    rockpro64*) PKGS="$BASEPKG ${PLATFORM%-*}-base" ;;
     *) die "$PROGNAME: invalid platform!";;
 esac
 
